--- a/src/patternfly/demos/Masthead/masthead-template.hbs
+++ b/src/patternfly/demos/Masthead/masthead-template.hbs
@@ -11,7 +11,8 @@
   masthead--modifier=masthead-template--modifier
   masthead-template-content-icon-group--breakpoint="lg"
   masthead--IsDocked=masthead-template--HasDockedNav
-  masthead-template--HasDividers=masthead-template--HasDockedNav}}
+  masthead-template--HasDividers=masthead-template--HasDockedNav
+  masthead-template--HasNoToggle=masthead-template--HasDockedNav}}
   {{#> masthead-main}}
     {{#unless masthead-template--HasNoToggle}}
       {{> masthead-toggle}}
