--- a/src/patternfly/demos/Compass/compass--sidebar-end.hbs
+++ b/src/patternfly/demos/Compass/compass--sidebar-end.hbs
@@ -2,27 +2,27 @@
   {{#> compass-panel compass-panel--IsPill=true}}
     {{#> action-list action-list--modifier="pf-m-icons" action-list--IsVertical=true}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="User profile" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Notifications" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-notification"}}
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="Help" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="List" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-list"}}
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="User profile" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Zap" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-electricity"}}
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="Send" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Download" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-download"}}
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="Send" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Help" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-question-mark-circle"}}
         {{/button}}
       {{/action-list-item}}
