--- a/src/patternfly/demos/Compass/compass--sidebar-start.hbs
+++ b/src/patternfly/demos/Compass/compass--sidebar-start.hbs
@@ -7,7 +7,7 @@
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="Help" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Collections" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-collection"}}
         {{/button}}
       {{/action-list-item}}
@@ -17,12 +17,12 @@
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="User profile" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Volume" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-volume-up"}}
         {{/button}}
       {{/action-list-item}}
       {{#> action-list-item}}
-        {{#> button button--IsPlain=true button--aria-label="Send" button--IsCircle=true button--IsIcon=true}}
+        {{#> button button--IsPlain=true button--aria-label="Use microphone" button--IsCircle=true button--IsIcon=true}}
           {{> pf-icon icon="rh-ui-microphone"}}
         {{/button}}
       {{/action-list-item}}
