feat: add docked nav (#8020)

--- a/src/patternfly/components/Compass/compass.hbs
+++ b/src/patternfly/components/Compass/compass.hbs
@@ -3,10 +3,8 @@
     pf-m-animate-smoothly
   {{/unless}}
   {{setModifiers
-    compass--IsStart='pf-m-start'
-    compass--IsEnd='pf-m-end'
-    compass--modifier=compass--modifier
-  }}"
+    compass--HasDock='pf-m-dock'
+    compass--modifier=compass--modifier}}"
   {{#if compass--attribute}}
     {{{compass--attribute}}}
   {{/if}}>
