--- a/src/patternfly/components/Compass/examples/Compass.css
+++ b/src/patternfly/components/Compass/examples/Compass.css
@@ -1,8 +1,14 @@
-#ws-core-a-compass-basic [class*="pf-v6-c-compass"] {
+.ws-core-a-compass .pf-v6-c-compass {
+  height: 600px;
+}
+
+#ws-core-a-compass-default [class*="pf-v6-c-compass"],
+#ws-core-a-compass-docked [class*="pf-v6-c-compass"] {
   position: relative;
 }
 
-#ws-core-a-compass-basic [class*="pf-v6-c-compass"]::after {
+#ws-core-a-compass-default [class*="pf-v6-c-compass"]::after,
+#ws-core-a-compass-docked [class*="pf-v6-c-compass"]::after {
   position: absolute;
   inset: 0;
   pointer-events: none;
