--- a/src/patternfly/components/TreeView/tree-view.scss
+++ b/src/patternfly/components/TreeView/tree-view.scss
@@ -97,6 +97,8 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   // Disabled
   --#{$tree-view}__list-item--m-disabled__node--Color: var(--pf-t--global--text--color--disabled);
   --#{$tree-view}__list-item--m-disabled__node-icon--Color: var(--pf-t--global--icon--color--disabled);
+  --#{$tree-view}--m-compact__node-container--nested--Color: inherit;
+  --#{$tree-view}--m-compact__node-container--m-disabled--nested--Color: var(--pf-t--global--text--color--on-disabled);
 
   // Text
   --#{$tree-view}__node-text--max-lines: 1;
@@ -304,6 +306,7 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
           padding-inline-start: var(--#{$tree-view}--m-compact__node-container--nested--PaddingInlineStart);
           padding-inline-end: var(--#{$tree-view}--m-compact__node-container--nested--PaddingInlineEnd);
           background-color: var(--#{$tree-view}--m-compact__node-container--nested--BackgroundColor);
+          color: var(--#{$tree-view}--m-compact__node-container--nested--Color);
         }
 
         // add margins to align item text flush left and offset gap between toggle and text
@@ -351,6 +354,7 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
 
   &.pf-m-no-background {
     --#{$tree-view}--m-compact__node-container--nested--BackgroundColor: var(--#{$tree-view}--m-no-background__node-container--BackgroundColor);
+    --#{$tree-view}--m-compact__node-container--m-disabled--nested--Color: var(--#{$tree-view}--m-compact__node-container--m-disabled--nested--Color);
   }
 }
 
@@ -437,6 +441,7 @@ $pf-v6-c-tree-view--MaxNesting: 10 !default;
   .pf-m-disabled > .#{$tree-view}__content > & {
     --#{$tree-view}__node--Color: var(--#{$tree-view}__list-item--m-disabled__node--Color);
     --#{$tree-view}__node-icon--Color: var(--#{$tree-view}__list-item--m-disabled__node-icon--Color);
+    --#{$tree-view}--m-compact__node-container--nested--Color: var(--#{$tree-view}--m-compact__node-container--m-disabled--nested--Color);
   }
 }
 
